--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     />
     <title>decision maker</title>
 
-    <link rel="shortcut icon" href="./assets/logo.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="body">
         <button onclick="runFetch()">choose</button>
         <h1>the machine says...</h1>
-        <img src="./assets/markus-winkler-wpOa2i3MUrY-unsplash.jpg" alt="machine answer visual form">
+        <img src="./assets/markus-winkler-wpOa2i3MUrY-unsplash.webp" alt="machine answer visual form">
         <script src="./script.js"></script>
     </div>
   </body>
